--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 	<meta charset='UTF-8'>
 	<title>Welcome to Express JS</title></head>
 <body>
-	<h1>Hello Welcome to JS Dev Env Cource come...</h1>
+	<h1>Hello Welcome to JS Dev Env Cource come</h1>
 	<script src='bundle.js'></script>
 </body>
 </html>
